{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 356,
  "lineage": "a0bf4fec-5c0b-576f-7bf1-9097b256e3b4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WebServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-090e0fc566929d98b",
            "arn": "arn:aws:ec2:us-east-1:069257086678:instance/i-0efad54dd6cf4d652",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0efad54dd6cf4d652",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWSWordpressKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e534bd895da46e49",
            "private_dns": "ip-10-0-1-41.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.41",
            "public_ip": "3.235.18.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-059b5441fb8347c43",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ec264279b510b69",
            "tags": {
              "Name": "WordpressServer"
            },
            "tags_all": {
              "Name": "WordpressServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f252633e010248d"
            ]
          },
          "dependencies": [
            "aws_db_instance.WordpressDB",
            "aws_key_pair.AWSWordpressKey",
            "aws_security_group.WordpressServerSG",
            "aws_subnet.PublicSubnet",
            "template_file.ShellInstaller",
            "template_file.mysqlscript",
            "template_file.wp-config",
            "tls_private_key.WordpressKey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "WordpressIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069257086678:internet-gateway/igw-02c2353679a217d70",
            "id": "igw-02c2353679a217d70",
            "owner_id": "069257086678",
            "tags": {
              "Name": "WordpressIGW"
            },
            "tags_all": {
              "Name": "WordpressIGW"
            },
            "vpc_id": "vpc-04077f5b38e16f5b2"
          },
          "dependencies": [
            "aws_vpc.WordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069257086678:route-table/rtb-0b8328a9ed0f851f0",
            "id": "rtb-0b8328a9ed0f851f0",
            "owner_id": "069257086678",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c2353679a217d70",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-04077f5b38e16f5b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.WordpressIGW",
            "aws_vpc.WordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicSubnetRouteAsso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0184eed3aca00645a",
            "route_table_id": "rtb-0b8328a9ed0f851f0",
            "subnet_id": "subnet-05ec264279b510b69"
          },
          "dependencies": [
            "aws_internet_gateway.WordpressIGW",
            "aws_route_table.PublicRouteTable",
            "aws_subnet.PublicSubnet",
            "aws_vpc.WordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS-SecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069257086678:security-group/sg-0510ffe6bbf118b8d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0510ffe6bbf118b8d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08f252633e010248d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20230703220834148500000002",
            "name_prefix": "terraform-",
            "owner_id": "069257086678",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS-SecurityGroup"
            },
            "tags_all": {
              "Name": "RDS-SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-04077f5b38e16f5b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.WordpressServerSG",
            "aws_vpc.WordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WordpressServerSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069257086678:security-group/sg-08f252633e010248d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f252633e010248d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230703220831910400000001",
            "name_prefix": "terraform-",
            "owner_id": "069257086678",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WordpressServerSG"
            },
            "tags_all": {
              "Name": "WordpressServerSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04077f5b38e16f5b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.WordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DB2Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069257086678:subnet/subnet-0eecb6ab4d4c549cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eecb6ab4d4c549cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "069257086678",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DBSubnet"
            },
            "tags_all": {
              "Name": "DBSubnet"
            },
            "vpc_id": "vpc-04077f5b38e16f5b2"
          },
          "dependencies": [
            "aws_vpc.WordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DBSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069257086678:subnet/subnet-07d346a7da6c01ee5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d346a7da6c01ee5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "069257086678",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DBSubnet"
            },
            "tags_all": {
              "Name": "DBSubnet"
            },
            "vpc_id": "vpc-04077f5b38e16f5b2"
          },
          "dependencies": [
            "aws_vpc.WordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069257086678:subnet/subnet-05ec264279b510b69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ec264279b510b69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "069257086678",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet"
            },
            "tags_all": {
              "Name": "PublicSubnet"
            },
            "vpc_id": "vpc-04077f5b38e16f5b2"
          },
          "dependencies": [
            "aws_vpc.WordpressVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "WordpressVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069257086678:vpc/vpc-04077f5b38e16f5b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-073237630587e6403",
            "default_route_table_id": "rtb-0e6399dd530d4bd05",
            "default_security_group_id": "sg-0293fb16e112183a1",
            "dhcp_options_id": "dopt-0ded75f982bc38dc4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04077f5b38e16f5b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e6399dd530d4bd05",
            "owner_id": "069257086678",
            "tags": {
              "Name": "WordpressVPC"
            },
            "tags_all": {
              "Name": "WordpressVPC"
            }
          }
        }
      ]
    }
  ]
}